# China_travel_assistant

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.bat  start.ps1  start.sh  stop.bat  stop.ps1
src/: __init__.py  run_all.py  run_frontend.py  run_orchestrator.py
src/agent_core/: __init__.py
src/agent_core/agents/: __init__.py
src/agent_core/graph/: __init__.py
src/agent_core/memory/: __init__.py
src/agent_core/tools/: __init__.py
src/agents/: __init__.py
src/agents/transport_agent/: __init__.py  agent.py  server.py
src/agents/weather_agent/: __init__.py  agent.py  server.py
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/frontend/src/: App.vue
src/frontend/src/router/: index.js
src/frontend/src/stores/: app.js  (+1 more)
src/mcp_clients/: __init__.py  amap_client.py  base_mcp_client.py  douyin_client.py  moji_weather_client.py  railway12306_client.py  xiaohongshu_client.py
src/orchestrator/: __init__.py  executor.py  session_manager.py
src/orchestrator/api/: __init__.py  app.py
src/orchestrator/classification/: __init__.py  llm_classify.py
src/orchestrator/discovery/: __init__.py  parallel_executor.py
src/orchestrator/routing/: __init__.py  layer1.py
src/prompts/: attraction.txt  clarifier.txt  route.txt  transport.txt  weather.txt
src/shared/: __init__.py  models.py
src/shared/a2a/: __init__.py  base_agent.py  base_server.py  types.py
tests/: __init__.py  test_agents.py  test_mcp_clients.py  test_orchestrator.py
(+12 files in other folders)
